--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,10 @@ services:
       - /app/node_modules
     command: sh -c "npm install --no-audit --no-fund && npm run dev"
     ports:
-      - "4000:4000"
+      - "3000:3000"
     environment:
       - NODE_ENV=development
+      - PORT=3000
 
   frontend:
     image: node:18
@@ -23,6 +24,6 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://backend:4000
+      - VITE_API_URL=http://backend:3000
     depends_on:
       - backend
