feat: Auth0 integration for Google login

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "https://rrw-backend.vercel.app/api/$1"
+    },
     { "source": "/(.*)", "destination": "/" }
   ]
 }
