--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint:css": "stylelint \"src/**/*.css\"",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx && npm run lint:css"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.11.0",
@@ -31,6 +32,10 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.25",
+    "jimp": "^1.6.0",
+    "sharp": "^0.34.5",
+    "stylelint": "^16.26.1",
+    "stylelint-config-standard": "^39.0.1",
     "vite": "^7.3.0"
   },
   "engines": {
