--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.11.0",
     "@babel/code-frame": "^7.27.1",
+    "@capacitor/android": "^8.0.1",
+    "@capacitor/core": "^8.0.1",
     "axios": "^1.13.2",
     "browser-image-compression": "^2.0.2",
     "chart.js": "^4.5.1",
@@ -28,6 +30,7 @@
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
+    "@capacitor/cli": "^8.0.1",
     "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
