chore(deploy): vercel config proxy /api to backend alias

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://rrnagar-backend-github-app.vercel.app/api/$1" },
-    { "source": "/api", "destination": "https://rrnagar-backend-github-app.vercel.app/api" }
-  ]
-}
-{
   "builds": [
     {
       "src": "package.json",
@@ -13,10 +7,8 @@
     }
   ],
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "https://rrnagar-backend-github-223551238790.asia-south1.run.app/api/$1"
-    },
+    { "source": "/api/(.*)", "destination": "https://rrnagar-backend-github-app.vercel.app/api/$1" },
+    { "source": "/api", "destination": "https://rrnagar-backend-github-app.vercel.app/api" },
     { "source": "/(.*)", "destination": "/" }
   ]
 }
